# dragonfly

./: .dockerignore  .gitignore  .gitmodules  .mcp.json  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.hookos-artifacts  Makefile.toml  NIX.md  README.md  ROADMAP.md  SECURITY.md  build.rs  docker-compose.yml  flake.nix  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
crates/dragonfly-actions/: Cargo.toml
crates/dragonfly-actions/src/: context.rs  engine.rs  error.rs  lib.rs  progress.rs  qcow2.rs  traits.rs
crates/dragonfly-actions/src/actions/: chroot.rs  debootstrap.rs  efibootmgr.rs  image2disk.rs  jetpack.rs  kexec.rs  mod.rs  partition.rs  reboot.rs  seabios.rs  writefile.rs
crates/dragonfly-agent/: Cargo.toml  Dockerfile
crates/dragonfly-agent/src/: boot_menu.rs  kexec.rs  main.rs  probe.rs  workflow.rs
crates/dragonfly-bmc/: Cargo.toml
crates/dragonfly-bmc/src/: controller.rs  error.rs  ipmi.rs  lib.rs  redfish.rs  types.rs  wol.rs
crates/dragonfly-common/: Cargo.toml
crates/dragonfly-common/src/: dns.rs  error.rs  lib.rs  mac_to_words.rs  machine.rs  models.rs  network.rs
crates/dragonfly-crd/: Cargo.toml
crates/dragonfly-crd/src/: error.rs  hardware.rs  lib.rs  metadata.rs  template.rs  workflow.rs
crates/dragonfly-dhcp/: Cargo.toml
crates/dragonfly-dhcp/src/: config.rs  error.rs  lib.rs  packet.rs  server.rs
crates/dragonfly-dns/: Cargo.toml
crates/dragonfly-dns/src/: handler.rs  lib.rs  provider.rs  server.rs
crates/dragonfly-ipxe/: Cargo.toml
crates/dragonfly-ipxe/src/: error.rs  lib.rs  script.rs
crates/dragonfly-metadata/: Cargo.toml
crates/dragonfly-metadata/src/: error.rs  lib.rs  service.rs  types.rs
crates/dragonfly-server/: Cargo.toml  build.rs
crates/dragonfly-server/src/: api.rs  api_token.rs  auth.rs  cluster.rs  db.rs  dns_sync.rs  encryption.rs  event_manager.rs  filters.rs  ha.rs  image_cache.rs  lib.rs  mode.rs  network_detect.rs  os_templates.rs  playbooks.rs  provisioning.rs  services.rs  status.rs  test_helpers.rs  tinkerbell.rs  ui.rs
crates/dragonfly-server/src/handlers/: api_tokens.rs  machines.rs  mod.rs  proxmox.rs
crates/dragonfly-server/src/handlers/proxmox/: client.rs  discovery.rs  errors.rs  mod.rs  settings.rs  sync.rs  tokens.rs  types.rs  vm_ops.rs
crates/dragonfly-server/src/store/: SCHEMA_V0.1.0.md  conversions.rs  memory.rs  mod.rs  redb_store.rs  tests.rs  types.rs
crates/dragonfly-server/src/store/v1/: memory.rs  mod.rs  redb.rs  rqlite.rs  sqlite.rs  tests.rs
crates/dragonfly-server/static/: os_names.json
crates/dragonfly-server/static/css/: tailwind.css
crates/dragonfly-server/templates/: base.html  compute.html  k8s_wizard.html  login.html  machine_details.html  machine_list.html  networks.html  settings.html  tags.html
crates/dragonfly-server/templates/partials/: machine_list_modals.html  status_and_progress.html
crates/dragonfly-spark/: .gitignore  Cargo.toml  README.md  build-grub-chain.sh  build.rs  build.sh  i686-spark.json  linker.ld  setup-pxelinux.sh  x86_64-spark.json
crates/dragonfly-spark/iso/boot/: spark.elf
crates/dragonfly-spark/iso/boot/grub/: grub.cfg
crates/dragonfly-spark/src/: ahci.rs  allocator.rs  bios.rs  bios_disk.rs  block_logo.rs  boot.s  chainload.rs  cmdline.rs  disk.rs  e1000e.rs  font.rs  framebuffer.rs  http.rs  hw.rs  main.rs  memory.rs  menu.rs  net.rs  pci.rs  pvscsi.rs  serial.rs  svga.rs  ui.rs  vbe.rs  vector_font.rs  vga.rs  virtio.rs  virtio_blk.rs  virtio_net.rs
crates/dragonfly-tftp/: Cargo.toml
crates/dragonfly-tftp/src/: error.rs  lib.rs  packet.rs  server.rs
crates/dragonfly-workflow/: Cargo.toml
crates/dragonfly-workflow/src/: error.rs  executor.rs  lib.rs  partition.rs  store.rs
crates/rqlite-rs/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig  README.md
crates/rqlite-rs-core/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig
crates/rqlite-rs-core/src/: column.rs  decode.rs  error.rs  from_row.rs  into_typed_rows.rs  lib.rs  row.rs
crates/rqlite-rs/src/: batch.rs  client.rs  config.rs  error.rs  lib.md  lib.rs  node.rs  query_result.rs  request.rs  response.rs  select.rs
crates/rqlite-rs/src/fallback/: mod.rs
crates/rqlite-rs/src/fallback/strategy/: mod.rs  priority.rs  random.rs  round_robin.rs
crates/rqlite-rs/src/query/: arguments.rs  mod.rs
crates/rqlite-rs/tests/: integration_client.rs  integration_ecosystem.rs  integration_macros.rs
crates/rqlite-rs/tests/common/: mod.rs
crates/rqlite-rs/tests/setup/: auth.json  docker-compose.yml
jetpack-playbooks/: build-tarballs.sh
jetpack-playbooks/debian-to-proxmox/: playbook.yml
jetpack-playbooks/debian-to-proxmox/roles/proxmox/: role.yml
jetpack-playbooks/debian-to-proxmox/roles/proxmox/tasks/: main.yml
os-templates/: debian-12.yml  debian-13.yml  proxmox-debootstrap.yml  proxmox.yml  rocky-10.yml  ubuntu-2204.yml  ubuntu-2404.yml
patches/: proxmox-time-fix.patch
patches/proxmox-client/: Cargo.toml
patches/proxmox-client/src/: client.rs
patches/proxmox-compression/: Cargo.toml
patches/proxmox-compression/src/: tar.rs  zip.rs
patches/proxmox-http/: Cargo.toml
patches/proxmox-http/src/client/: connector.rs  simple.rs  sync.rs  tls.rs
patches/proxmox-http/src/websocket/: mod.rs
patches/proxmox-io/: Cargo.toml
patches/proxmox-io/src/: endian.rs  lib.rs  read.rs  write.rs
patches/proxmox-sys/: Cargo.toml
patches/proxmox-sys/src/: lib.rs  process_locker.rs
patches/proxmox-sys/src/fs/: file.rs  mod.rs  xattr.rs
patches/proxmox-time/: Cargo.toml
patches/proxmox-time/src/: posix.rs  tm_editor.rs
playbooks/: dragonfly-test.yml  dragonfly.yml  helm.yml  hookos-artifacts.yml  install.yml  k3s.yml  tinkerbell.yml
playbooks/cluster/: configure.yml  install.yml  provision.yml  setup-hosts.yml  start-rqlite.yml
scripts/: build-debian-mage.sh  build-mage.sh
src/: main.rs
src/cmd/: dev.rs  install.rs  install_old.rs  mcp.rs  mod.rs  network.rs
src/cmd/install_pve/: mod.rs  playbook.rs  proxmox.rs
tests/: cli_scenario_a.rs
