[workspace]
members = [
    "crates/dragonfly-common",
    "crates/dragonfly-crd",
    "crates/dragonfly-actions",
    "crates/dragonfly-workflow",
    "crates/dragonfly-dhcp",
    "crates/dragonfly-tftp",
    "crates/dragonfly-ipxe",
    "crates/dragonfly-bmc",
    "crates/dragonfly-metadata",
    "crates/dragonfly-server",
    "crates/dragonfly-agent",
    "."  # Include the main package
]
# Spark uses nightly + bare metal target, so it's built separately
exclude = ["crates/dragonfly-spark"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4", "v5", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[package]
name = "dragonfly"
version = "0.1.0"
edition = "2024"
authors = ["Sparx"]
description = "A web application for managing bare metal datacenter infrastructure"

[features]
default = []
dhat-heap = ["dhat"]

[dependencies]
# Profiling (Optional)
dhat = { version = "0.3", optional = true }



# Web Framework
axum = { version = "0.8", features = ["macros"] }
tokio = { workspace = true }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "auth"] }
hyper = { version = "1.1", features = ["server"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Kubernetes
k8s-openapi = { version = "0.20", features = ["v1_28"] }
kube = { version = "0.87", features = ["runtime"] }

# Error Handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Security
bcrypt = "0.15"

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
once_cell = "1.18"
clap = { version = "4.5.10", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "sqlite"] }
dragonfly-server = { path = "crates/dragonfly-server" }
color-eyre = "0.6.3"
ipnetwork = "0.20.0"
libc = "0.2.155"
network-interface = "1.1.0"
listenfd = "1.0.1"
lazy_static = "1.4.0"
aes-gcm = "0.10.3"
base64 = "0.22"
notify = "6.1"

# Automation & Progress
jetpack = { git = "https://github.com/riffcc/jetpack", tag = "v0.2.0" }
indicatif = "0.17"
crossterm = "0.27"
tempfile = "3.8"

[dev-dependencies]
tokio-test = "0.4"
assert_cmd = "2.0"
predicates = "3.0"

[build-dependencies]
walkdir = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "Element"] }
js-sys = "0.3"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

# Patch proxmox crates for macOS compatibility
[patch."https://github.com/proxmox/proxmox-rs"]
proxmox-time = { path = "patches/proxmox-time" }
proxmox-compression = { path = "patches/proxmox-compression" }
proxmox-sys = { path = "patches/proxmox-sys" }
proxmox-http = { path = "patches/proxmox-http" }
proxmox-io = { path = "patches/proxmox-io" }
proxmox-client = { path = "patches/proxmox-client" }
