[package]
name = "dragonfly-actions"
version = "0.1.0"
edition = "2021"
authors = ["Sparx"]
description = "Native action engine for Dragonfly bare metal provisioning"
license = "Apache-2.0"

[dependencies]
dragonfly-crd = { path = "../dragonfly-crd" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
