[package]
name = "dragonfly-actions"
version = "0.1.0"
edition = "2024"
authors = ["Sparx"]
description = "Native action engine for Dragonfly bare metal provisioning"
license = "AGPL-3.0"

[dependencies]
dragonfly-crd = { path = "../dragonfly-crd" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
base64 = "0.22"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.14"
