[package]
name = "dragonfly-actions"
version = "0.1.0"
edition = "2024"
authors = ["Sparx"]
description = "Native action engine for Dragonfly bare metal provisioning"
license = "AGPL-3.0"

[dependencies]
dragonfly-crd = { path = "../dragonfly-crd" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
base64 = "0.22"
lazy_static = "1.5"

# Native image streaming
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "json"] }
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
async-compression = { version = "0.4", features = ["tokio", "gzip", "xz", "zstd"] }
astral-tokio-tar = "0.5"
flate2 = "1.0"  # For QCOW2 compressed clusters (zlib/deflate)
byteorder = "1.5"  # For reading big-endian QCOW2 headers

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.14"
