[package]
name = "dragonfly-agent"
version = "0.2.1"
edition = "2024"
authors = ["Sparx"]
description = "Agent for Dragonfly bare metal infrastructure management"

[dependencies]
dragonfly-common = { path = "../dragonfly-common" }
dragonfly-crd = { path = "../dragonfly-crd" }
dragonfly-actions = { path = "../dragonfly-actions" }
dragonfly-workflow = { path = "../dragonfly-workflow" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# Use rustls for TLS to avoid OpenSSL dependency (needed for musl builds)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4.5", features = ["derive"] }

# OS information gathering
sysinfo = "0.30"

# Disk probing and cleanup
scopeguard = "1.2"

# Terminal UI for boot menu (Ratatui for fullscreen responsive layouts)
ratatui = "0.30"
crossterm = "0.28"