[package]
name = "dragonfly-bmc"
version = "0.2.2"
edition = "2024"
authors = ["Sparx"]
description = "BMC/IPMI/Redfish control for Dragonfly bare metal provisioning"
license = "AGPL-3.0"

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
