[package]
name = "dragonfly-common"
version = "0.2.0"
edition = "2024"
authors = ["Sparx"]
description = "Common models and utilities for Dragonfly"

[dependencies]
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
sha2 = "0.10"
rand = "0.8"

[dev-dependencies]
serde_json = { workspace = true }