[package]
name = "dragonfly-crd"
version = "0.1.0"
edition = "2021"
authors = ["Sparx"]
description = "CRD-compatible types for Dragonfly bare metal provisioning"
license = "Apache-2.0"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4"
