[package]
name = "dragonfly-crd"
version = "0.1.0"
edition = "2024"
authors = ["Sparx"]
description = "CRD-compatible types for Dragonfly bare metal provisioning"
license = "AGPL-3.0"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
dragonfly-common = { path = "../dragonfly-common" }

[dev-dependencies]
pretty_assertions = "1.4"
serde_yaml = "0.9"
