[package]
name = "dragonfly-dhcp"
version = "0.2.3"
edition = "2024"
authors = ["Sparx"]
description = "DHCP server for Dragonfly bare metal provisioning with PXE support"
license = "AGPL-3.0"

[dependencies]
dragonfly-common = { path = "../dragonfly-common" }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
async-trait = "0.1"

# DHCP protocol
dhcproto = "0.14"

# Networking
socket2 = { version = "0.5", features = ["all"] }

[dev-dependencies]
tokio-test = "0.4"
