[package]
name = "dragonfly-server"
version = "0.1.0"
edition = "2024"
authors = ["Sparx"]
description = "API server for Dragonfly bare metal infrastructure management"

[features]
default = []
server-binary = []

[dependencies]
# Web Framework
axum = { version = "0.8.3", features = ["macros", "ws", "http2", "multipart"] }
# Authentication
axum-login = "0.18"
axum-extra = { version = "0.10.1", features = ["typed-header", "cookie", "cookie-signed"] }
# Sessions
tower-sessions = { version = "0.14.0" }
# Use sqlx store - trying version 0.15.0 for compatibility
tower-sessions-sqlx-store = { version = "0.15.0", features = ["sqlite"] }
async-session = "3.0.0"
async-trait = "0.1"
# For SSE streaming
async-stream = "0.3.5"
# Password hashing
argon2 = "0.5.2"
minijinja = { version = "2.3.0", features = ["loader"] }
minijinja-autoreload = "2.3.0"
minijinja-embed = "2.3.0"
# Databases
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres", "sqlite", "uuid", "chrono", "json", "migrate"] }
# Utilities
rand = "0.8.5"
time = "0.3"
uuid = { version = "1.8.0", features = ["v4", "v5", "v7", "serde"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace", "cors"] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# YAML parsing
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0.81"
thiserror = "1.0.48"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "fmt"] }
once_cell = "1.17.1"
cookie = { version = "0.18", features = ["private"] }
bincode = "1.3"
tower-cookies = "0.11.0"

# Networking / DNS
# dns_lookup = "2.0.4" # Removed synchronous resolver
hickory-resolver = { version = "0.24.4", features = ["tokio-runtime"] } # Renamed from trust-dns-resolver

# Local dependencies
dragonfly-common = { path = "../dragonfly-common" }
dragonfly-crd = { path = "../dragonfly-crd" }
dragonfly-ipxe = { path = "../dragonfly-ipxe" }
dragonfly-workflow = { path = "../dragonfly-workflow" }
dragonfly-dhcp = { path = "../dragonfly-dhcp" }
dragonfly-tftp = { path = "../dragonfly-tftp" }
dragonfly-metadata = { path = "../dragonfly-metadata" }
dragonfly-actions = { path = "../dragonfly-actions" }

# Async compression and tar for image cache
async-compression = { version = "0.4", features = ["tokio", "gzip", "zstd"] }
astral-tokio-tar = "0.5"
tokio-util = { version = "0.7", features = ["io"] }

# Storage — SQLite via sqlx (already in deps above)

# Kubernetes integration (moved from root)
kube = { version = "0.87.1", features = ["client", "derive", "runtime"] } # Use version from root Cargo.toml
k8s-openapi = { version = "0.20.0", features = ["v1_28"] }           # Use version from root Cargo.toml

# Artifact download dependencies
reqwest = { version = "0.12.4", features = ["stream", "json", "rustls-tls"], default-features = false }
bytes = "1.11.1"
sha2 = "0.10.8"
http-body-util = "0.1.3"
http-body = "1.0.1"
url = "2.5.4"
tempfile = "3.19.1"

# Unix utilities
nix = { version = "0.28.0", features = ["user", "fs"] }

# Background/socket activation
listenfd = "1.0.1"

# Logging to file
tracing-appender = "0.2"

# Platform-specific directories
dirs = "5.0"

# Low-level C bindings
libc = "0.2"

sysinfo = "0.30"

# Archive handling
tar = "0.4"
flate2 = "1.0"

# Error handling (moved from root)
color-eyre = "0.6" # Add color-eyre dependency
lazy_static = "1.4.0"

# New dependencies
base64 = "0.22"
oauth2 = { version = "4.4", features = ["reqwest"] }
urlencoding = "2.1"
aes-gcm = "0.10.3"

# Proxmox & Network Scanning
proxmox-client = { git = "https://github.com/proxmox/proxmox-rs", features = ["hyper-client"] }
proxmox-schema = { git = "https://github.com/proxmox/proxmox-rs", features = ["api-types"] }
proxmox-http = { git = "https://github.com/proxmox/proxmox-rs" }
proxmox-login = { git = "https://github.com/proxmox/proxmox-rs" }
hyper = { version = "1", features = ["client", "http1", "http2"] }
hyper-tls = { version = "0.6" }
netscan = { version = "0.28" }
netdev = { version = "0.26" }
dns-lookup = "2.0"

# Added regex dependency
regex = "1"

# Add http crate dependency
http = "1"

# Embed static assets in release builds
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
mime_guess = "2"

[dev-dependencies]
tempfile = "3.8"
serial_test = "3.0"