[workspace]
# Standalone workspace - not part of main dragonfly workspace
# Uses nightly Rust + bare metal target

[package]
name = "dragonfly-spark"
version = "0.2.3"
edition = "2024"
authors = ["Dragonfly Contributors"]
description = "Tiny multiboot binary for OS detection and GRUB chainloading"
license = "AGPL-3.0-or-later"

[dependencies]
spin = { version = "0.9", default-features = false, features = ["mutex", "spin_mutex"] }

# TCP/IP stack for bare metal (x86_64 has native AtomicU64)
smoltcp = { version = "0.11", default-features = false, features = [
    "medium-ethernet",
    "proto-ipv4",
    "socket-tcp",
    "socket-dhcpv4",
    "alloc",
] }

managed = { version = "0.8", default-features = false, features = ["alloc"] }

[features]
default = []

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1

[profile.dev]
panic = "abort"
