[package]
name = "dragonfly-tftp"
version = "0.1.0"
edition = "2024"
authors = ["Sparx"]
description = "TFTP server for Dragonfly bare metal provisioning - serves iPXE binaries"
license = "AGPL-3.0"

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
bytes = "1.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
