[package]
name = "proxmox-sys"
description = "System tools (using nix) - patched for dual macOS/Linux"
version = "1.0.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = "1"
libc = "0.2"
log = "0.4"
nix = { version = "0.28", features = ["dir", "fs", "ioctl", "mman", "net", "process", "signal", "socket", "user"] }
openssl = { version = "0.10", optional = true }
regex = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
zstd = { version = "0.13", optional = true }

proxmox-io = { git = "https://github.com/proxmox/proxmox-rs" }
proxmox-lang = { git = "https://github.com/proxmox/proxmox-rs" }

[features]
default = []
logrotate = ["dep:zstd"]
acl = []
crypt = ["dep:openssl"]
timer = []
